Updated bowl results.

--- a/bowl_pool/2016-2017/rankings.html
+++ b/bowl_pool/2016-2017/rankings.html
@@ -342,68 +342,68 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-01-01 12:07:16</em></div>
-<div class="line"><em>Last bowl scored:  FIESTA BOWL (Ohio State vs. Clemson)</em></div>
+<div class="line"><em>Last updated:  2017-01-02 23:36:50</em></div>
+<div class="line"><em>Last bowl scored:  SUGAR BOWL (Oklahoma vs. Auburn)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Zena 31.5</div>
-<div class="line">2. Gussysue 29.75</div>
-<div class="line">3. <strong>Eclipse 28.5</strong></div>
-<div class="line">4. <strong>The force is strong with this one 28.0</strong></div>
-<div class="line">5. Cjepson 27.0</div>
-<div class="line">5. <strong>Do. Or do not. 27.0</strong></div>
-<div class="line">7. Blind Dog's Bluff 26.5</div>
-<div class="line">8. Gkid7 26.25</div>
-<div class="line">9. Jake and the Neverland Pirates 25.5</div>
-<div class="line">9. Maine Chic 25.5</div>
-<div class="line">11. Blindhog 2017 25.0</div>
-<div class="line">11. ConflictofInterest 25.0</div>
-<div class="line">13. <strong>GlamKam 24.75</strong></div>
-<div class="line">13. <strong>Red Five 24.75</strong></div>
-<div class="line">15. <strong>D-bo 24.25</strong></div>
-<div class="line">15. Krazy Koochies 24.25</div>
-<div class="line">15. OSUX3 Fan 24.25</div>
-<div class="line">18. Backroom Deals 23.5</div>
-<div class="line">18. <strong>EM43 23.5</strong></div>
-<div class="line">18. Thetis 23.5</div>
-<div class="line">21. EVA 23.0</div>
-<div class="line">21. O'Pooh 23.0</div>
-<div class="line">21. Texas Giants 23.0</div>
-<div class="line">24. GoForBones 22.75</div>
-<div class="line">24. Putin's Dog 22.75</div>
-<div class="line">24. The Dude 22.75</div>
-<div class="line">27. Aaron's Team 22.5</div>
-<div class="line">27. <strong>Bumblerooski 22.5</strong></div>
-<div class="line">27. Fake News 22.5</div>
-<div class="line">27. Katyusa 22.5</div>
-<div class="line">27. <strong>You are my only hope 22.5</strong></div>
-<div class="line">32. <strong>#MamaBear 22.25</strong></div>
-<div class="line">33. ADTESQ 22.0</div>
-<div class="line">33. Amy Senders 22.0</div>
-<div class="line">33. Corgidawg 22.0</div>
-<div class="line">33. Team Ellie Mae 22.0</div>
-<div class="line">37. SantaCruzBill 21.75</div>
-<div class="line">38. After Further Review 21.5</div>
-<div class="line">38. Dirk Diggler 21.5</div>
-<div class="line">40. Biscuit's Ball 21.25</div>
-<div class="line">41. CUTIE PIE 21.0</div>
-<div class="line">41. Godiva 21.0</div>
-<div class="line">43. 12th Man 20.0</div>
-<div class="line">44. Spiker 19.75</div>
-<div class="line">45. Doc 19.5</div>
-<div class="line">46. Tyrone Swoopes 19.0</div>
-<div class="line">46. West Coast Bias 19.0</div>
-<div class="line">48. Best Logo Wins 18.0</div>
-<div class="line">48. T-Bone 18.0</div>
-<div class="line">50. LUCKY IN 2017 17.25</div>
-<div class="line">51. #NeverBama1 17.0</div>
-<div class="line">51. Trollmaster 17.0</div>
-<div class="line">53. THE BEAVERS WON THE CIVIL WAR AND THAT IS ALL THAT MATTERS 15.25</div>
-<div class="line">54. Invanka Trump 15.0</div>
-<div class="line">55. Troll Factory Inc 14.0</div>
-<div class="line">56. Spem in perpetuum 13.0</div>
-<div class="line">57. LaDolceVida 10.25</div>
-<div class="line">58. Cowboy 8.0</div>
+<div class="line">1. Zena 37.5</div>
+<div class="line">2. <strong>The force is strong with this one 35.0</strong></div>
+<div class="line">3. <strong>Eclipse 34.5</strong></div>
+<div class="line">4. Gussysue 33.75</div>
+<div class="line">5. Blind Dog's Bluff 33.5</div>
+<div class="line">6. Cjepson 33.0</div>
+<div class="line">7. OSUX3 Fan 32.25</div>
+<div class="line">8. <strong>Do. Or do not. 32.0</strong></div>
+<div class="line">9. Jake and the Neverland Pirates 31.5</div>
+<div class="line">9. Maine Chic 31.5</div>
+<div class="line">11. Gkid7 31.25</div>
+<div class="line">12. <strong>Red Five 30.75</strong></div>
+<div class="line">13. Katyusa 30.5</div>
+<div class="line">14. <strong>#MamaBear 30.25</strong></div>
+<div class="line">14. Krazy Koochies 30.25</div>
+<div class="line">16. ADTESQ 30.0</div>
+<div class="line">16. Amy Senders 30.0</div>
+<div class="line">16. Corgidawg 30.0</div>
+<div class="line">16. EVA 30.0</div>
+<div class="line">16. Godiva 30.0</div>
+<div class="line">21. <strong>GlamKam 29.75</strong></div>
+<div class="line">21. The Dude 29.75</div>
+<div class="line">23. Aaron's Team 29.5</div>
+<div class="line">23. Thetis 29.5</div>
+<div class="line">23. <strong>You are my only hope 29.5</strong></div>
+<div class="line">26. Blindhog 2017 29.0</div>
+<div class="line">27. GoForBones 28.75</div>
+<div class="line">27. Putin's Dog 28.75</div>
+<div class="line">27. SantaCruzBill 28.75</div>
+<div class="line">27. Spiker 28.75</div>
+<div class="line">31. 12th Man 28.0</div>
+<div class="line">31. ConflictofInterest 28.0</div>
+<div class="line">31. CUTIE PIE 28.0</div>
+<div class="line">31. Texas Giants 28.0</div>
+<div class="line">35. <strong>EM43 27.5</strong></div>
+<div class="line">36. Biscuit's Ball 27.25</div>
+<div class="line">36. <strong>D-bo 27.25</strong></div>
+<div class="line">38. Backroom Deals 26.5</div>
+<div class="line">38. <strong>Bumblerooski 26.5</strong></div>
+<div class="line">38. Dirk Diggler 26.5</div>
+<div class="line">41. Team Ellie Mae 26.0</div>
+<div class="line">41. West Coast Bias 26.0</div>
+<div class="line">43. After Further Review 25.5</div>
+<div class="line">43. Fake News 25.5</div>
+<div class="line">45. T-Bone 25.0</div>
+<div class="line">46. Doc 24.5</div>
+<div class="line">47. #NeverBama1 24.0</div>
+<div class="line">47. Tyrone Swoopes 24.0</div>
+<div class="line">49. Invanka Trump 23.0</div>
+<div class="line">49. O'Pooh 23.0</div>
+<div class="line">51. Best Logo Wins 20.0</div>
+<div class="line">51. Trollmaster 20.0</div>
+<div class="line">53. LaDolceVida 19.25</div>
+<div class="line">53. LUCKY IN 2017 19.25</div>
+<div class="line">55. Troll Factory Inc 19.0</div>
+<div class="line">56. Spem in perpetuum 18.0</div>
+<div class="line">57. THE BEAVERS WON THE CIVIL WAR AND THAT IS ALL THAT MATTERS 17.25</div>
+<div class="line">58. Cowboy 17.0</div>
 </div>
 </div>
 </body>
