--- a/bowl_pool/2016-2017/results.html
+++ b/bowl_pool/2016-2017/results.html
@@ -2458,6 +2458,262 @@ ul.auto-toc {
 <td>0.0</td>
 <td>2.5</td>
 </tr>
+<tr><td>32</td>
+<td>OUTBACK BOWL</td>
+<td>Florida</td>
+<td>Iowa</td>
+<td>2.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>33</td>
+<td>COTTON BOWL</td>
+<td>Wisconsin</td>
+<td>Western Michigan</td>
+<td>7.5</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+</tr>
+<tr><td>34</td>
+<td>ROSE BOWL</td>
+<td>USC</td>
+<td>Penn State</td>
+<td>7.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>35</td>
+<td>SUGAR BOWL</td>
+<td>Oklahoma</td>
+<td>Auburn</td>
+<td>4.5</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+</tr>
 <tr><td>B2</td>
 <td>Washington more than 345 yards total offense?</td>
 <td>&nbsp;</td>
@@ -2586,69 +2842,133 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>B4</td>
+<td>Will SEC have more bowl victories than Big10?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>22.25</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>20.0</strong></td>
-<td><strong>22.5</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>21.5</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>23.5</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>26.5</strong></td>
-<td><strong>25.0</strong></td>
-<td><strong>22.5</strong></td>
-<td><strong>27.0</strong></td>
-<td><strong>25.0</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>8.0</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>24.25</strong></td>
-<td><strong>21.5</strong></td>
-<td><strong>27.0</strong></td>
-<td><strong>19.5</strong></td>
-<td><strong>28.5</strong></td>
-<td><strong>23.5</strong></td>
-<td><strong>23.0</strong></td>
-<td><strong>22.5</strong></td>
-<td><strong>26.25</strong></td>
-<td><strong>24.75</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>22.75</strong></td>
-<td><strong>29.75</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>25.5</strong></td>
-<td><strong>22.5</strong></td>
-<td><strong>24.25</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>25.5</strong></td>
-<td><strong>23.0</strong></td>
-<td><strong>24.25</strong></td>
-<td><strong>22.75</strong></td>
-<td><strong>24.75</strong></td>
-<td><strong>21.75</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>23.0</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>22.75</strong></td>
+<td><strong>30.25</strong></td>
+<td><strong>24.0</strong></td>
 <td><strong>28.0</strong></td>
-<td><strong>23.5</strong></td>
-<td><strong>14.0</strong></td>
+<td><strong>29.5</strong></td>
+<td><strong>30.0</strong></td>
+<td><strong>25.5</strong></td>
+<td><strong>30.0</strong></td>
+<td><strong>26.5</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>27.25</strong></td>
+<td><strong>33.5</strong></td>
+<td><strong>29.0</strong></td>
+<td><strong>26.5</strong></td>
+<td><strong>33.0</strong></td>
+<td><strong>28.0</strong></td>
+<td><strong>30.0</strong></td>
 <td><strong>17.0</strong></td>
-<td><strong>19.0</strong></td>
-<td><strong>19.0</strong></td>
-<td><strong>22.5</strong></td>
+<td><strong>28.0</strong></td>
+<td><strong>27.25</strong></td>
+<td><strong>26.5</strong></td>
+<td><strong>32.0</strong></td>
+<td><strong>24.5</strong></td>
+<td><strong>34.5</strong></td>
+<td><strong>27.5</strong></td>
+<td><strong>30.0</strong></td>
+<td><strong>25.5</strong></td>
+<td><strong>31.25</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>30.0</strong></td>
+<td><strong>28.75</strong></td>
+<td><strong>33.75</strong></td>
+<td><strong>23.0</strong></td>
 <td><strong>31.5</strong></td>
+<td><strong>30.5</strong></td>
+<td><strong>30.25</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>31.5</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>32.25</strong></td>
+<td><strong>28.75</strong></td>
+<td><strong>30.75</strong></td>
+<td><strong>28.75</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>28.75</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>26.0</strong></td>
+<td><strong>28.0</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>35.0</strong></td>
+<td><strong>29.5</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>24.0</strong></td>
+<td><strong>26.0</strong></td>
+<td><strong>29.5</strong></td>
+<td><strong>37.5</strong></td>
 </tr>
 </tbody>
 </table>
