--- a/bowl_pool/test/2016-2017/rankings.html
+++ b/bowl_pool/test/2016-2017/rankings.html
@@ -342,68 +342,68 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2016-12-29 14:45:10</em></div>
-<div class="line"><em>Last bowl scored:  TEXAS BOWL (Texas A&amp;M vs. Kansas State)</em></div>
+<div class="line"><em>Last updated:  2017-01-06 13:21:18</em></div>
+<div class="line"><em>Last bowl scored:  SUGAR BOWL (Oklahoma vs. Auburn)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>The force is strong with this one 16.75</strong></div>
-<div class="line">2. <strong>D-bo 16.25</strong></div>
-<div class="line">3. Blindhog 2017 15.75</div>
-<div class="line">4. Jake and the Neverland Pirates 15.5</div>
-<div class="line">5. <strong>Do. Or do not. 14.75</strong></div>
-<div class="line">6. <strong>Bumblerooski 14.5</strong></div>
-<div class="line">7. O'Pooh 14.25</div>
-<div class="line">8. Backroom Deals 13.75</div>
-<div class="line">8. <strong>Eclipse 13.75</strong></div>
-<div class="line">8. Zena 13.75</div>
-<div class="line">11. Aaron's Team 13.25</div>
-<div class="line">11. <strong>EM43 13.25</strong></div>
-<div class="line">11. <strong>GlamKam 13.25</strong></div>
-<div class="line">14. <strong>#MamaBear 13.0</strong></div>
-<div class="line">15. Cjepson 12.75</div>
-<div class="line">15. Fake News 12.75</div>
-<div class="line">15. Krazy Koochies 12.75</div>
-<div class="line">18. Doc 12.5</div>
-<div class="line">19. GoForBones 12.25</div>
-<div class="line">19. LUCKY IN 2017 12.25</div>
-<div class="line">19. The Dude 12.25</div>
-<div class="line">19. <strong>You are my only hope 12.25</strong></div>
-<div class="line">23. Blind Dog's Bluff 12.0</div>
-<div class="line">23. OSUX3 Fan 12.0</div>
-<div class="line">23. Team Ellie Mae 12.0</div>
-<div class="line">26. Dirk Diggler 11.75</div>
-<div class="line">27. Gkid7 11.5</div>
-<div class="line">27. Texas Giants 11.5</div>
-<div class="line">29. ConflictofInterest 11.25</div>
-<div class="line">29. <strong>Red Five 11.25</strong></div>
-<div class="line">29. THE BEAVERS WON THE CIVIL WAR AND THAT IS ALL THAT MATTERS 11.25</div>
-<div class="line">32. 12th Man 11.0</div>
-<div class="line">32. ADTESQ 11.0</div>
-<div class="line">32. Corgidawg 11.0</div>
-<div class="line">32. EVA 11.0</div>
-<div class="line">32. Gussysue 11.0</div>
-<div class="line">32. Maine Chic 11.0</div>
-<div class="line">32. Thetis 11.0</div>
-<div class="line">32. Tyrone Swoopes 11.0</div>
-<div class="line">40. After Further Review 10.5</div>
-<div class="line">41. Putin's Dog 10.25</div>
-<div class="line">42. Amy Senders 10.0</div>
-<div class="line">42. Biscuit's Ball 10.0</div>
-<div class="line">42. Godiva 10.0</div>
-<div class="line">42. Katyusa 10.0</div>
-<div class="line">42. Troll Factory Inc 10.0</div>
-<div class="line">47. SantaCruzBill 9.25</div>
-<div class="line">48. #NeverBama1 8.75</div>
-<div class="line">49. West Coast Bias 8.5</div>
-<div class="line">50. T-Bone 8.25</div>
-<div class="line">51. Invanka Trump 8.0</div>
-<div class="line">52. CUTIE PIE 7.25</div>
-<div class="line">53. Best Logo Wins 6.25</div>
-<div class="line">54. Spiker 6.0</div>
-<div class="line">54. Trollmaster 6.0</div>
-<div class="line">56. LaDolceVida 4.25</div>
-<div class="line">57. Spem in perpetuum 4.0</div>
-<div class="line">58. Cowboy 3.0</div>
+<div class="line">1. Zena 37.5</div>
+<div class="line">2. <strong>The force is strong with this one 35.0</strong></div>
+<div class="line">3. <strong>Eclipse 34.5</strong></div>
+<div class="line">4. Gussysue 33.75</div>
+<div class="line">5. Blind Dog's Bluff 33.5</div>
+<div class="line">6. Cjepson 33.0</div>
+<div class="line">7. OSUX3 Fan 32.25</div>
+<div class="line">8. <strong>Do. Or do not. 32.0</strong></div>
+<div class="line">9. Jake and the Neverland Pirates 31.5</div>
+<div class="line">9. Maine Chic 31.5</div>
+<div class="line">9. Thetis 31.5</div>
+<div class="line">12. Gkid7 31.25</div>
+<div class="line">13. <strong>Red Five 30.75</strong></div>
+<div class="line">14. Katyusa 30.5</div>
+<div class="line">15. <strong>#MamaBear 30.25</strong></div>
+<div class="line">15. Krazy Koochies 30.25</div>
+<div class="line">17. ADTESQ 30.0</div>
+<div class="line">17. Amy Senders 30.0</div>
+<div class="line">17. Corgidawg 30.0</div>
+<div class="line">17. EVA 30.0</div>
+<div class="line">17. Godiva 30.0</div>
+<div class="line">22. <strong>GlamKam 29.75</strong></div>
+<div class="line">22. The Dude 29.75</div>
+<div class="line">24. Aaron's Team 29.5</div>
+<div class="line">24. <strong>You are my only hope 29.5</strong></div>
+<div class="line">26. Blindhog 2017 29.0</div>
+<div class="line">27. GoForBones 28.75</div>
+<div class="line">27. Putin's Dog 28.75</div>
+<div class="line">27. SantaCruzBill 28.75</div>
+<div class="line">27. Spiker 28.75</div>
+<div class="line">31. 12th Man 28.0</div>
+<div class="line">31. ConflictofInterest 28.0</div>
+<div class="line">31. CUTIE PIE 28.0</div>
+<div class="line">31. Texas Giants 28.0</div>
+<div class="line">35. <strong>EM43 27.5</strong></div>
+<div class="line">35. Fake News 27.5</div>
+<div class="line">37. Biscuit's Ball 27.25</div>
+<div class="line">37. <strong>D-bo 27.25</strong></div>
+<div class="line">39. Backroom Deals 26.5</div>
+<div class="line">39. <strong>Bumblerooski 26.5</strong></div>
+<div class="line">39. Dirk Diggler 26.5</div>
+<div class="line">42. Team Ellie Mae 26.0</div>
+<div class="line">42. West Coast Bias 26.0</div>
+<div class="line">44. After Further Review 25.5</div>
+<div class="line">45. O'Pooh 25.0</div>
+<div class="line">45. T-Bone 25.0</div>
+<div class="line">47. Doc 24.5</div>
+<div class="line">48. #NeverBama1 24.0</div>
+<div class="line">48. Tyrone Swoopes 24.0</div>
+<div class="line">50. Invanka Trump 23.0</div>
+<div class="line">51. Best Logo Wins 20.0</div>
+<div class="line">51. Trollmaster 20.0</div>
+<div class="line">53. LaDolceVida 19.25</div>
+<div class="line">53. LUCKY IN 2017 19.25</div>
+<div class="line">55. Troll Factory Inc 19.0</div>
+<div class="line">56. Spem in perpetuum 18.0</div>
+<div class="line">57. THE BEAVERS WON THE CIVIL WAR AND THAT IS ALL THAT MATTERS 17.25</div>
+<div class="line">58. Cowboy 17.0</div>
 </div>
 </div>
 </body>
