Updated championship winner.

--- a/bowl_pool/2016-2017/results.html
+++ b/bowl_pool/2016-2017/results.html
@@ -2714,6 +2714,70 @@ ul.auto-toc {
 <td>2.0</td>
 <td>2.0</td>
 </tr>
+<tr><td>B1</td>
+<td>Who will win the National Championship</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B2</td>
 <td>Washington more than 345 yards total offense?</td>
 <td>&nbsp;</td>
@@ -2936,7 +3000,7 @@ ul.auto-toc {
 <td><strong>34.5</strong></td>
 <td><strong>27.5</strong></td>
 <td><strong>30.0</strong></td>
-<td><strong>25.5</strong></td>
+<td><strong>27.5</strong></td>
 <td><strong>31.25</strong></td>
 <td><strong>29.75</strong></td>
 <td><strong>30.0</strong></td>
@@ -2949,7 +3013,7 @@ ul.auto-toc {
 <td><strong>19.25</strong></td>
 <td><strong>19.25</strong></td>
 <td><strong>31.5</strong></td>
-<td><strong>23.0</strong></td>
+<td><strong>25.0</strong></td>
 <td><strong>32.25</strong></td>
 <td><strong>28.75</strong></td>
 <td><strong>30.75</strong></td>
@@ -2962,7 +3026,7 @@ ul.auto-toc {
 <td><strong>17.25</strong></td>
 <td><strong>29.75</strong></td>
 <td><strong>35.0</strong></td>
-<td><strong>29.5</strong></td>
+<td><strong>31.5</strong></td>
 <td><strong>19.0</strong></td>
 <td><strong>20.0</strong></td>
 <td><strong>24.0</strong></td>
