Fixed error in bowl results/picks order.

--- a/bowl_pool/2017-2018/results.html
+++ b/bowl_pool/2017-2018/results.html
@@ -602,7 +602,7 @@ ul.auto-toc {
 <tr><td>2</td>
 <td>Cure Bowl</td>
 <td>Western Kentucky</td>
-<td>Gerogia State</td>
+<td>Georgia State</td>
 <td>6.0</td>
 <td>0.0</td>
 <td>1.5</td>
@@ -908,7 +908,7 @@ ul.auto-toc {
 <td>0.0</td>
 </tr>
 <tr><td>6</td>
-<td>Boca Ratan Bowl</td>
+<td>Boca Raton Bowl</td>
 <td>Florida Atlantic</td>
 <td>Akron</td>
 <td>22.5</td>
@@ -1062,10 +1062,10 @@ ul.auto-toc {
 <td>0.0</td>
 </tr>
 <tr><td>8</td>
-<td>Bahamas Bowl</td>
-<td>Ohio</td>
-<td>Alabama Birmingham (UAB)</td>
-<td>7.5</td>
+<td>Gasparila Bowl</td>
+<td>Temple</td>
+<td>Florida Internation (FIU)</td>
+<td>7.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -1139,10 +1139,10 @@ ul.auto-toc {
 <td>1.0</td>
 </tr>
 <tr><td>9</td>
-<td>Famous Idaho Potato Bowl</td>
-<td>Wyoming</td>
-<td>Central Michigan</td>
-<td>1.0</td>
+<td>Bahamas Bowl</td>
+<td>Ohio</td>
+<td>Alabama Birmingham (UAB)</td>
+<td>7.5</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.0</td>
@@ -1216,10 +1216,10 @@ ul.auto-toc {
 <td>1.0</td>
 </tr>
 <tr><td>10</td>
-<td>Gasparila Bowl</td>
-<td>Temple</td>
-<td>Florida Internation (FIU)</td>
-<td>7.0</td>
+<td>Famous Idaho Potato Bowl</td>
+<td>Wyoming</td>
+<td>Central Michigan</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>0.0</td>
