Test site TPR update

--- a/bowl_pool/test/2017-2018/picks.html
+++ b/bowl_pool/test/2017-2018/picks.html
@@ -693,7 +693,7 @@ ul.auto-toc {
 <td>Oregon</td>
 <td>Oregon</td>
 <td>Boise State</td>
-<td>Oregon</td>
+<td>Boise State</td>
 <td>Boise State</td>
 <td>Boise State</td>
 <td>Oregon</td>
@@ -770,7 +770,7 @@ ul.auto-toc {
 <td>Colorado State</td>
 <td>Marshall</td>
 <td>Colorado State</td>
-<td>Colorado State</td>
+<td>Marshall</td>
 <td>Colorado State</td>
 <td>Colorado State</td>
 <td>Colorado State</td>
@@ -847,7 +847,7 @@ ul.auto-toc {
 <td>Middle Tennessee State</td>
 <td>Middle Tennessee State</td>
 <td>Arkansas State</td>
-<td>Arkansas State</td>
+<td>Middle Tennessee State</td>
 <td>Middle Tennessee State</td>
 <td>Arkansas State</td>
 <td>Arkansas State</td>
