Quick Lane Bowl Update

--- a/bowl_pool/test/2017-2018/rankings.html
+++ b/bowl_pool/test/2017-2018/rankings.html
@@ -364,81 +364,81 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-12-26 17:13:26</em></div>
-<div class="line"><em>Last bowl scored:  Heart of Dallas (Utah vs. West Virginia)</em></div>
+<div class="line"><em>Last updated:  2017-12-26 19:38:31</em></div>
+<div class="line"><em>Last bowl scored:  Quick Lane Bowl (Duke vs. Northern Illinois)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Clutch City 15.5</div>
-<div class="line">2. <strong>Bumblerooski 14.75</strong></div>
-<div class="line">3. Trojans 13.5</div>
-<div class="line">4. The Pick Doctor 13.0</div>
-<div class="line">5. Still a Beaver Believer 12.75</div>
-<div class="line">5. The Water and The Well 12.75</div>
-<div class="line">5. War Beaver 12.75</div>
-<div class="line">8. 4 Rackets 12.5</div>
-<div class="line">8. Pooh Bear 12.5</div>
-<div class="line">8. Yoda 12.5</div>
-<div class="line">11. Brothers before others 12.25</div>
-<div class="line">11. War Eagle 12.25</div>
-<div class="line">11. Winning Jeff 12.25</div>
-<div class="line">14. UrbranLegend 12.0</div>
-<div class="line">15. I lost the password to my first bracket 11.5</div>
-<div class="line">15. Jake and the Neverland Pirates 11.5</div>
-<div class="line">17. Bevo's Best 11.25</div>
-<div class="line">17. Juul 11.25</div>
-<div class="line">19. beach lady 11.0</div>
-<div class="line">19. Superman 11.0</div>
-<div class="line">21. Bobbo 10.75</div>
-<div class="line">21. Coog Crew 10.75</div>
-<div class="line">21. OSUX3 10.75</div>
-<div class="line">24. Cowboy 10.5</div>
-<div class="line">25. Katyusha 10.0</div>
-<div class="line">26. Josh's Bracket 9.5</div>
-<div class="line">26. Santa Cruz Bill 9.5</div>
-<div class="line">28. Texas Big Red 9.25</div>
-<div class="line">29. Assistant Coach Riley? 9.0</div>
-<div class="line">29. Make Bowl Season Great Again 9.0</div>
-<div class="line">29. Rapacke's Bracket 9.0</div>
-<div class="line">29. <strong>Static 9.0</strong></div>
-<div class="line">33. Adrian A 8.75</div>
-<div class="line">33. <strong>Eclipse 8.75</strong></div>
-<div class="line">33. Go For Bones 8.75</div>
-<div class="line">33. Godiva Nine! 8.75</div>
-<div class="line">33. MidWestWheat 8.75</div>
-<div class="line">33. <strong>Nerf Herder 8.75</strong></div>
-<div class="line">33. Sgt. Pepper 8.75</div>
-<div class="line">33. West Coast Bias 8.75</div>
-<div class="line">41. Nurse Ratched 8.5</div>
-<div class="line">41. Putin's Dog 8.5</div>
-<div class="line">41. Tucker 8.5</div>
-<div class="line">44. cutie pie 8.0</div>
-<div class="line">44. <strong>Lightning 8.0</strong></div>
-<div class="line">44. Pepper Bear 8.0</div>
-<div class="line">44. Sorbet 8.0</div>
-<div class="line">44. <strong>Thunder 8.0</strong></div>
-<div class="line">49. Swampdonkey 7.75</div>
-<div class="line">50. Blind Dog's Bluff 7.5</div>
-<div class="line">50. <strong>D-Bo 7.5</strong></div>
-<div class="line">50. Julez 7.5</div>
-<div class="line">50. Luck be a lady 7.5</div>
-<div class="line">50. Maui Girl 7.5</div>
-<div class="line">55. Bay City Rollers 7.25</div>
-<div class="line">55. Lucky in 2018 7.25</div>
-<div class="line">57. <strong>#MamaBear 7.0</strong></div>
-<div class="line">57. Escalante 7.0</div>
-<div class="line">57. The Striker 7.0</div>
-<div class="line">60. Blindhog2017 6.75</div>
-<div class="line">60. Victorious Secret 6.75</div>
-<div class="line">62. Duke Rules 6.5</div>
-<div class="line">62. Kevin's bracket 6.5</div>
-<div class="line">62. YOLO Pups 6.5</div>
-<div class="line">65. Batman 6.0</div>
-<div class="line">65. Go For Broke 6.0</div>
-<div class="line">65. hapagirl 6.0</div>
+<div class="line">1. Clutch City 16.5</div>
+<div class="line">2. <strong>Bumblerooski 15.75</strong></div>
+<div class="line">3. Trojans 14.5</div>
+<div class="line">4. Still a Beaver Believer 13.75</div>
+<div class="line">4. The Water and The Well 13.75</div>
+<div class="line">6. War Eagle 13.25</div>
+<div class="line">7. The Pick Doctor 13.0</div>
+<div class="line">8. War Beaver 12.75</div>
+<div class="line">9. 4 Rackets 12.5</div>
+<div class="line">9. I lost the password to my first bracket 12.5</div>
+<div class="line">9. Jake and the Neverland Pirates 12.5</div>
+<div class="line">9. Pooh Bear 12.5</div>
+<div class="line">9. Yoda 12.5</div>
+<div class="line">14. Bevo's Best 12.25</div>
+<div class="line">14. Brothers before others 12.25</div>
+<div class="line">14. Juul 12.25</div>
+<div class="line">14. Winning Jeff 12.25</div>
+<div class="line">18. beach lady 12.0</div>
+<div class="line">18. UrbranLegend 12.0</div>
+<div class="line">20. Bobbo 11.75</div>
+<div class="line">21. Cowboy 11.5</div>
+<div class="line">22. Superman 11.0</div>
+<div class="line">23. Coog Crew 10.75</div>
+<div class="line">23. OSUX3 10.75</div>
+<div class="line">25. Santa Cruz Bill 10.5</div>
+<div class="line">26. Texas Big Red 10.25</div>
+<div class="line">27. Assistant Coach Riley? 10.0</div>
+<div class="line">27. Katyusha 10.0</div>
+<div class="line">27. Rapacke's Bracket 10.0</div>
+<div class="line">27. <strong>Static 10.0</strong></div>
+<div class="line">31. Adrian A 9.75</div>
+<div class="line">31. <strong>Eclipse 9.75</strong></div>
+<div class="line">31. Godiva Nine! 9.75</div>
+<div class="line">31. MidWestWheat 9.75</div>
+<div class="line">31. <strong>Nerf Herder 9.75</strong></div>
+<div class="line">36. Josh's Bracket 9.5</div>
+<div class="line">36. Nurse Ratched 9.5</div>
+<div class="line">38. cutie pie 9.0</div>
+<div class="line">38. <strong>Lightning 9.0</strong></div>
+<div class="line">38. Make Bowl Season Great Again 9.0</div>
+<div class="line">38. Pepper Bear 9.0</div>
+<div class="line">38. Sorbet 9.0</div>
+<div class="line">38. <strong>Thunder 9.0</strong></div>
+<div class="line">44. Go For Bones 8.75</div>
+<div class="line">44. Sgt. Pepper 8.75</div>
+<div class="line">44. West Coast Bias 8.75</div>
+<div class="line">47. Blind Dog's Bluff 8.5</div>
+<div class="line">47. <strong>D-Bo 8.5</strong></div>
+<div class="line">47. Duke Rules 8.5</div>
+<div class="line">47. Maui Girl 8.5</div>
+<div class="line">47. Putin's Dog 8.5</div>
+<div class="line">47. Tucker 8.5</div>
+<div class="line">53. Bay City Rollers 8.25</div>
+<div class="line">54. <strong>#MamaBear 8.0</strong></div>
+<div class="line">54. The Striker 8.0</div>
+<div class="line">56. Swampdonkey 7.75</div>
+<div class="line">57. Julez 7.5</div>
+<div class="line">57. Kevin's bracket 7.5</div>
+<div class="line">57. Luck be a lady 7.5</div>
+<div class="line">57. YOLO Pups 7.5</div>
+<div class="line">61. Lucky in 2018 7.25</div>
+<div class="line">62. Escalante 7.0</div>
+<div class="line">62. hapagirl 7.0</div>
+<div class="line">64. Blindhog2017 6.75</div>
+<div class="line">64. Victorious Secret 6.75</div>
+<div class="line">66. Batman 6.0</div>
+<div class="line">66. Go For Broke 6.0</div>
 <div class="line">68. Santa's Helper 5.5</div>
+<div class="line">69. <strong>Em214 5.0</strong></div>
 <div class="line">69. <strong>GlamKam 5.0</strong></div>
-<div class="line">70. Warren Mooned Me 4.25</div>
-<div class="line">71. <strong>Em214 4.0</strong></div>
+<div class="line">71. Warren Mooned Me 4.25</div>
 </div>
 </div>
 </body>
