--- a/bowl_pool/2017-2018/results.html
+++ b/bowl_pool/2017-2018/results.html
@@ -1677,82 +1677,159 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>16</td>
+<td>Quick Lane Bowl</td>
+<td>Duke</td>
+<td>Northern Illinois</td>
+<td>4.5</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>7.0</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>8.75</strong></td>
-<td><strong>9.0</strong></td>
-<td><strong>6.0</strong></td>
-<td><strong>7.25</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>11.25</strong></td>
-<td><strong>7.5</strong></td>
-<td><strong>6.75</strong></td>
-<td><strong>10.75</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>10.0</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>10.75</strong></td>
-<td><strong>10.5</strong></td>
 <td><strong>8.0</strong></td>
-<td><strong>7.5</strong></td>
-<td><strong>6.5</strong></td>
-<td><strong>8.75</strong></td>
-<td><strong>4.0</strong></td>
+<td><strong>12.5</strong></td>
+<td><strong>9.75</strong></td>
+<td><strong>10.0</strong></td>
+<td><strong>6.0</strong></td>
+<td><strong>8.25</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>12.25</strong></td>
+<td><strong>8.5</strong></td>
+<td><strong>6.75</strong></td>
+<td><strong>11.75</strong></td>
+<td><strong>12.25</strong></td>
+<td><strong>11.0</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>10.75</strong></td>
+<td><strong>11.5</strong></td>
+<td><strong>9.0</strong></td>
+<td><strong>8.5</strong></td>
+<td><strong>8.5</strong></td>
+<td><strong>9.75</strong></td>
+<td><strong>5.0</strong></td>
 <td><strong>7.0</strong></td>
 <td><strong>5.0</strong></td>
 <td><strong>8.75</strong></td>
 <td><strong>6.0</strong></td>
-<td><strong>8.75</strong></td>
-<td><strong>6.0</strong></td>
-<td><strong>11.5</strong></td>
-<td><strong>11.5</strong></td>
+<td><strong>9.75</strong></td>
+<td><strong>7.0</strong></td>
+<td><strong>12.5</strong></td>
+<td><strong>12.5</strong></td>
 <td><strong>9.5</strong></td>
 <td><strong>7.5</strong></td>
-<td><strong>11.25</strong></td>
+<td><strong>12.25</strong></td>
 <td><strong>10.0</strong></td>
-<td><strong>6.5</strong></td>
-<td><strong>8.0</strong></td>
+<td><strong>7.5</strong></td>
+<td><strong>9.0</strong></td>
 <td><strong>7.5</strong></td>
 <td><strong>7.25</strong></td>
 <td><strong>9.0</strong></td>
-<td><strong>7.5</strong></td>
-<td><strong>8.75</strong></td>
 <td><strong>8.5</strong></td>
+<td><strong>9.75</strong></td>
+<td><strong>9.5</strong></td>
 <td><strong>10.75</strong></td>
-<td><strong>8.0</strong></td>
+<td><strong>9.0</strong></td>
 <td><strong>12.5</strong></td>
 <td><strong>8.5</strong></td>
-<td><strong>9.0</strong></td>
-<td><strong>8.75</strong></td>
-<td><strong>9.5</strong></td>
+<td><strong>10.0</strong></td>
+<td><strong>9.75</strong></td>
+<td><strong>10.5</strong></td>
 <td><strong>5.5</strong></td>
 <td><strong>8.75</strong></td>
-<td><strong>8.0</strong></td>
 <td><strong>9.0</strong></td>
-<td><strong>12.75</strong></td>
+<td><strong>10.0</strong></td>
+<td><strong>13.75</strong></td>
 <td><strong>11.0</strong></td>
 <td><strong>7.75</strong></td>
-<td><strong>9.25</strong></td>
+<td><strong>10.25</strong></td>
 <td><strong>13.0</strong></td>
-<td><strong>7.0</strong></td>
-<td><strong>12.75</strong></td>
 <td><strong>8.0</strong></td>
-<td><strong>13.5</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>9.0</strong></td>
+<td><strong>14.5</strong></td>
 <td><strong>8.5</strong></td>
 <td><strong>12.0</strong></td>
 <td><strong>6.75</strong></td>
 <td><strong>12.75</strong></td>
-<td><strong>12.25</strong></td>
+<td><strong>13.25</strong></td>
 <td><strong>4.25</strong></td>
 <td><strong>8.75</strong></td>
 <td><strong>12.25</strong></td>
 <td><strong>12.5</strong></td>
-<td><strong>6.5</strong></td>
+<td><strong>7.5</strong></td>
 </tr>
 </tbody>
 </table>
