--- a/bowl_pool/test/2017-2018/rankings.html
+++ b/bowl_pool/test/2017-2018/rankings.html
@@ -364,80 +364,80 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-12-26 19:38:31</em></div>
-<div class="line"><em>Last bowl scored:  Quick Lane Bowl (Duke vs. Northern Illinois)</em></div>
+<div class="line"><em>Last updated:  2017-12-27 08:59:38</em></div>
+<div class="line"><em>Last bowl scored:  Cactus Bowl (Kansas State vs. UCLA)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Clutch City 16.5</div>
-<div class="line">2. <strong>Bumblerooski 15.75</strong></div>
-<div class="line">3. Trojans 14.5</div>
-<div class="line">4. Still a Beaver Believer 13.75</div>
-<div class="line">4. The Water and The Well 13.75</div>
-<div class="line">6. War Eagle 13.25</div>
-<div class="line">7. The Pick Doctor 13.0</div>
-<div class="line">8. War Beaver 12.75</div>
-<div class="line">9. 4 Rackets 12.5</div>
-<div class="line">9. I lost the password to my first bracket 12.5</div>
-<div class="line">9. Jake and the Neverland Pirates 12.5</div>
-<div class="line">9. Pooh Bear 12.5</div>
-<div class="line">9. Yoda 12.5</div>
-<div class="line">14. Bevo's Best 12.25</div>
-<div class="line">14. Brothers before others 12.25</div>
-<div class="line">14. Juul 12.25</div>
-<div class="line">14. Winning Jeff 12.25</div>
-<div class="line">18. beach lady 12.0</div>
-<div class="line">18. UrbranLegend 12.0</div>
-<div class="line">20. Bobbo 11.75</div>
-<div class="line">21. Cowboy 11.5</div>
-<div class="line">22. Superman 11.0</div>
-<div class="line">23. Coog Crew 10.75</div>
-<div class="line">23. OSUX3 10.75</div>
-<div class="line">25. Santa Cruz Bill 10.5</div>
-<div class="line">26. Texas Big Red 10.25</div>
-<div class="line">27. Assistant Coach Riley? 10.0</div>
-<div class="line">27. Katyusha 10.0</div>
-<div class="line">27. Rapacke's Bracket 10.0</div>
-<div class="line">27. <strong>Static 10.0</strong></div>
-<div class="line">31. Adrian A 9.75</div>
-<div class="line">31. <strong>Eclipse 9.75</strong></div>
-<div class="line">31. Godiva Nine! 9.75</div>
-<div class="line">31. MidWestWheat 9.75</div>
-<div class="line">31. <strong>Nerf Herder 9.75</strong></div>
-<div class="line">36. Josh's Bracket 9.5</div>
-<div class="line">36. Nurse Ratched 9.5</div>
-<div class="line">38. cutie pie 9.0</div>
-<div class="line">38. <strong>Lightning 9.0</strong></div>
-<div class="line">38. Make Bowl Season Great Again 9.0</div>
-<div class="line">38. Pepper Bear 9.0</div>
-<div class="line">38. Sorbet 9.0</div>
-<div class="line">38. <strong>Thunder 9.0</strong></div>
-<div class="line">44. Go For Bones 8.75</div>
-<div class="line">44. Sgt. Pepper 8.75</div>
-<div class="line">44. West Coast Bias 8.75</div>
-<div class="line">47. Blind Dog's Bluff 8.5</div>
-<div class="line">47. <strong>D-Bo 8.5</strong></div>
-<div class="line">47. Duke Rules 8.5</div>
-<div class="line">47. Maui Girl 8.5</div>
-<div class="line">47. Putin's Dog 8.5</div>
-<div class="line">47. Tucker 8.5</div>
-<div class="line">53. Bay City Rollers 8.25</div>
-<div class="line">54. <strong>#MamaBear 8.0</strong></div>
-<div class="line">54. The Striker 8.0</div>
-<div class="line">56. Swampdonkey 7.75</div>
-<div class="line">57. Julez 7.5</div>
-<div class="line">57. Kevin's bracket 7.5</div>
-<div class="line">57. Luck be a lady 7.5</div>
-<div class="line">57. YOLO Pups 7.5</div>
-<div class="line">61. Lucky in 2018 7.25</div>
-<div class="line">62. Escalante 7.0</div>
-<div class="line">62. hapagirl 7.0</div>
-<div class="line">64. Blindhog2017 6.75</div>
-<div class="line">64. Victorious Secret 6.75</div>
-<div class="line">66. Batman 6.0</div>
-<div class="line">66. Go For Broke 6.0</div>
-<div class="line">68. Santa's Helper 5.5</div>
-<div class="line">69. <strong>Em214 5.0</strong></div>
-<div class="line">69. <strong>GlamKam 5.0</strong></div>
+<div class="line">1. <strong>Bumblerooski 16.75</strong></div>
+<div class="line">2. Clutch City 16.5</div>
+<div class="line">3. Trojans 15.5</div>
+<div class="line">4. Still a Beaver Believer 14.75</div>
+<div class="line">5. The Water and The Well 13.75</div>
+<div class="line">5. War Beaver 13.75</div>
+<div class="line">7. Jake and the Neverland Pirates 13.5</div>
+<div class="line">7. Yoda 13.5</div>
+<div class="line">9. Bevo's Best 13.25</div>
+<div class="line">9. War Eagle 13.25</div>
+<div class="line">9. Winning Jeff 13.25</div>
+<div class="line">12. The Pick Doctor 13.0</div>
+<div class="line">13. Bobbo 12.75</div>
+<div class="line">14. 4 Rackets 12.5</div>
+<div class="line">14. Cowboy 12.5</div>
+<div class="line">14. I lost the password to my first bracket 12.5</div>
+<div class="line">14. Pooh Bear 12.5</div>
+<div class="line">18. Brothers before others 12.25</div>
+<div class="line">18. Juul 12.25</div>
+<div class="line">20. beach lady 12.0</div>
+<div class="line">20. Superman 12.0</div>
+<div class="line">20. UrbranLegend 12.0</div>
+<div class="line">23. Santa Cruz Bill 11.5</div>
+<div class="line">24. Katyusha 11.0</div>
+<div class="line">24. <strong>Static 11.0</strong></div>
+<div class="line">26. Coog Crew 10.75</div>
+<div class="line">26. Godiva Nine! 10.75</div>
+<div class="line">26. MidWestWheat 10.75</div>
+<div class="line">26. OSUX3 10.75</div>
+<div class="line">26. <strong>Nerf Herder 10.75</strong></div>
+<div class="line">31. Texas Big Red 10.25</div>
+<div class="line">32. Assistant Coach Riley? 10.0</div>
+<div class="line">32. Make Bowl Season Great Again 10.0</div>
+<div class="line">32. Pepper Bear 10.0</div>
+<div class="line">32. Rapacke's Bracket 10.0</div>
+<div class="line">32. Sorbet 10.0</div>
+<div class="line">32. <strong>Thunder 10.0</strong></div>
+<div class="line">38. Adrian A 9.75</div>
+<div class="line">38. <strong>Eclipse 9.75</strong></div>
+<div class="line">40. Josh's Bracket 9.5</div>
+<div class="line">40. Maui Girl 9.5</div>
+<div class="line">40. Nurse Ratched 9.5</div>
+<div class="line">40. Putin's Dog 9.5</div>
+<div class="line">40. Tucker 9.5</div>
+<div class="line">45. Bay City Rollers 9.25</div>
+<div class="line">46. <strong>#MamaBear 9.0</strong></div>
+<div class="line">46. cutie pie 9.0</div>
+<div class="line">46. <strong>Lightning 9.0</strong></div>
+<div class="line">49. Go For Bones 8.75</div>
+<div class="line">49. Sgt. Pepper 8.75</div>
+<div class="line">49. West Coast Bias 8.75</div>
+<div class="line">52. Blind Dog's Bluff 8.5</div>
+<div class="line">52. <strong>D-Bo 8.5</strong></div>
+<div class="line">52. Duke Rules 8.5</div>
+<div class="line">52. Luck be a lady 8.5</div>
+<div class="line">56. Escalante 8.0</div>
+<div class="line">56. The Striker 8.0</div>
+<div class="line">58. Blindhog2017 7.75</div>
+<div class="line">58. Swampdonkey 7.75</div>
+<div class="line">58. Victorious Secret 7.75</div>
+<div class="line">61. Julez 7.5</div>
+<div class="line">61. Kevin's bracket 7.5</div>
+<div class="line">61. YOLO Pups 7.5</div>
+<div class="line">64. Lucky in 2018 7.25</div>
+<div class="line">65. Batman 7.0</div>
+<div class="line">65. Go For Broke 7.0</div>
+<div class="line">65. hapagirl 7.0</div>
+<div class="line">68. <strong>Em214 6.0</strong></div>
+<div class="line">69. Santa's Helper 5.5</div>
+<div class="line">70. <strong>GlamKam 5.0</strong></div>
 <div class="line">71. Warren Mooned Me 4.25</div>
 </div>
 </div>
