--- a/bowl_pool/test/2017-2018/rankings.html
+++ b/bowl_pool/test/2017-2018/rankings.html
@@ -364,81 +364,81 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-12-27 08:59:38</em></div>
-<div class="line"><em>Last bowl scored:  Cactus Bowl (Kansas State vs. UCLA)</em></div>
+<div class="line"><em>Last updated:  2017-12-27 17:28:40</em></div>
+<div class="line"><em>Last bowl scored:  Indpendence Bowl (Florida State vs. Southern Miss)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Bumblerooski 16.75</strong></div>
-<div class="line">2. Clutch City 16.5</div>
-<div class="line">3. Trojans 15.5</div>
-<div class="line">4. Still a Beaver Believer 14.75</div>
-<div class="line">5. The Water and The Well 13.75</div>
-<div class="line">5. War Beaver 13.75</div>
-<div class="line">7. Jake and the Neverland Pirates 13.5</div>
-<div class="line">7. Yoda 13.5</div>
-<div class="line">9. Bevo's Best 13.25</div>
-<div class="line">9. War Eagle 13.25</div>
-<div class="line">9. Winning Jeff 13.25</div>
-<div class="line">12. The Pick Doctor 13.0</div>
-<div class="line">13. Bobbo 12.75</div>
-<div class="line">14. 4 Rackets 12.5</div>
-<div class="line">14. Cowboy 12.5</div>
-<div class="line">14. I lost the password to my first bracket 12.5</div>
-<div class="line">14. Pooh Bear 12.5</div>
-<div class="line">18. Brothers before others 12.25</div>
-<div class="line">18. Juul 12.25</div>
-<div class="line">20. beach lady 12.0</div>
-<div class="line">20. Superman 12.0</div>
-<div class="line">20. UrbranLegend 12.0</div>
-<div class="line">23. Santa Cruz Bill 11.5</div>
-<div class="line">24. Katyusha 11.0</div>
-<div class="line">24. <strong>Static 11.0</strong></div>
-<div class="line">26. Coog Crew 10.75</div>
-<div class="line">26. Godiva Nine! 10.75</div>
-<div class="line">26. MidWestWheat 10.75</div>
-<div class="line">26. OSUX3 10.75</div>
-<div class="line">26. <strong>Nerf Herder 10.75</strong></div>
-<div class="line">31. Texas Big Red 10.25</div>
-<div class="line">32. Assistant Coach Riley? 10.0</div>
-<div class="line">32. Make Bowl Season Great Again 10.0</div>
-<div class="line">32. Pepper Bear 10.0</div>
-<div class="line">32. Rapacke's Bracket 10.0</div>
-<div class="line">32. Sorbet 10.0</div>
-<div class="line">32. <strong>Thunder 10.0</strong></div>
-<div class="line">38. Adrian A 9.75</div>
-<div class="line">38. <strong>Eclipse 9.75</strong></div>
-<div class="line">40. Josh's Bracket 9.5</div>
-<div class="line">40. Maui Girl 9.5</div>
-<div class="line">40. Nurse Ratched 9.5</div>
-<div class="line">40. Putin's Dog 9.5</div>
-<div class="line">40. Tucker 9.5</div>
-<div class="line">45. Bay City Rollers 9.25</div>
-<div class="line">46. <strong>#MamaBear 9.0</strong></div>
-<div class="line">46. cutie pie 9.0</div>
-<div class="line">46. <strong>Lightning 9.0</strong></div>
-<div class="line">49. Go For Bones 8.75</div>
-<div class="line">49. Sgt. Pepper 8.75</div>
-<div class="line">49. West Coast Bias 8.75</div>
-<div class="line">52. Blind Dog's Bluff 8.5</div>
-<div class="line">52. <strong>D-Bo 8.5</strong></div>
-<div class="line">52. Duke Rules 8.5</div>
-<div class="line">52. Luck be a lady 8.5</div>
-<div class="line">56. Escalante 8.0</div>
-<div class="line">56. The Striker 8.0</div>
-<div class="line">58. Blindhog2017 7.75</div>
-<div class="line">58. Swampdonkey 7.75</div>
-<div class="line">58. Victorious Secret 7.75</div>
-<div class="line">61. Julez 7.5</div>
-<div class="line">61. Kevin's bracket 7.5</div>
-<div class="line">61. YOLO Pups 7.5</div>
-<div class="line">64. Lucky in 2018 7.25</div>
-<div class="line">65. Batman 7.0</div>
-<div class="line">65. Go For Broke 7.0</div>
-<div class="line">65. hapagirl 7.0</div>
-<div class="line">68. <strong>Em214 6.0</strong></div>
-<div class="line">69. Santa's Helper 5.5</div>
-<div class="line">70. <strong>GlamKam 5.0</strong></div>
-<div class="line">71. Warren Mooned Me 4.25</div>
+<div class="line">1. <strong>Bumblerooski 18.75</strong></div>
+<div class="line">2. Clutch City 18.5</div>
+<div class="line">3. Still a Beaver Believer 16.75</div>
+<div class="line">4. Trojans 16.5</div>
+<div class="line">5. The Water and The Well 15.75</div>
+<div class="line">6. Jake and the Neverland Pirates 15.5</div>
+<div class="line">7. Bevo's Best 15.25</div>
+<div class="line">7. War Eagle 15.25</div>
+<div class="line">9. Bobbo 14.75</div>
+<div class="line">9. War Beaver 14.75</div>
+<div class="line">11. 4 Rackets 14.5</div>
+<div class="line">11. Cowboy 14.5</div>
+<div class="line">11. I lost the password to my first bracket 14.5</div>
+<div class="line">11. Yoda 14.5</div>
+<div class="line">15. Juul 14.25</div>
+<div class="line">16. beach lady 14.0</div>
+<div class="line">16. Superman 14.0</div>
+<div class="line">16. The Pick Doctor 14.0</div>
+<div class="line">19. Santa Cruz Bill 13.5</div>
+<div class="line">20. Winning Jeff 13.25</div>
+<div class="line">21. <strong>Static 13.0</strong></div>
+<div class="line">22. Coog Crew 12.75</div>
+<div class="line">22. Godiva Nine! 12.75</div>
+<div class="line">22. <strong>Nerf Herder 12.75</strong></div>
+<div class="line">25. Pooh Bear 12.5</div>
+<div class="line">26. Brothers before others 12.25</div>
+<div class="line">27. Katyusha 12.0</div>
+<div class="line">27. Make Bowl Season Great Again 12.0</div>
+<div class="line">27. Pepper Bear 12.0</div>
+<div class="line">27. Sorbet 12.0</div>
+<div class="line">27. <strong>Thunder 12.0</strong></div>
+<div class="line">27. UrbranLegend 12.0</div>
+<div class="line">33. <strong>Eclipse 11.75</strong></div>
+<div class="line">33. MidWestWheat 11.75</div>
+<div class="line">33. OSUX3 11.75</div>
+<div class="line">36. Josh's Bracket 11.5</div>
+<div class="line">36. Maui Girl 11.5</div>
+<div class="line">36. Putin's Dog 11.5</div>
+<div class="line">36. Tucker 11.5</div>
+<div class="line">40. Bay City Rollers 11.25</div>
+<div class="line">41. <strong>#MamaBear 11.0</strong></div>
+<div class="line">41. Assistant Coach Riley? 11.0</div>
+<div class="line">41. <strong>Lightning 11.0</strong></div>
+<div class="line">41. Rapacke's Bracket 11.0</div>
+<div class="line">45. Adrian A 10.75</div>
+<div class="line">46. Nurse Ratched 10.5</div>
+<div class="line">47. Texas Big Red 10.25</div>
+<div class="line">48. cutie pie 10.0</div>
+<div class="line">48. Escalante 10.0</div>
+<div class="line">48. The Striker 10.0</div>
+<div class="line">51. Go For Bones 9.75</div>
+<div class="line">51. Sgt. Pepper 9.75</div>
+<div class="line">51. Swampdonkey 9.75</div>
+<div class="line">51. West Coast Bias 9.75</div>
+<div class="line">55. Blind Dog's Bluff 9.5</div>
+<div class="line">55. Kevin's bracket 9.5</div>
+<div class="line">55. Luck be a lady 9.5</div>
+<div class="line">58. Batman 9.0</div>
+<div class="line">58. Go For Broke 9.0</div>
+<div class="line">60. Blindhog2017 8.75</div>
+<div class="line">60. Victorious Secret 8.75</div>
+<div class="line">62. <strong>D-Bo 8.5</strong></div>
+<div class="line">62. Duke Rules 8.5</div>
+<div class="line">62. Julez 8.5</div>
+<div class="line">62. YOLO Pups 8.5</div>
+<div class="line">66. <strong>Em214 8.0</strong></div>
+<div class="line">66. hapagirl 8.0</div>
+<div class="line">68. Santa's Helper 7.5</div>
+<div class="line">69. Lucky in 2018 7.25</div>
+<div class="line">70. Warren Mooned Me 6.25</div>
+<div class="line">71. <strong>GlamKam 6.0</strong></div>
 </div>
 </div>
 </body>
