--- a/bowl_pool/test/2017-2018/rankings.html
+++ b/bowl_pool/test/2017-2018/rankings.html
@@ -364,81 +364,81 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-12-27 17:28:40</em></div>
-<div class="line"><em>Last bowl scored:  Indpendence Bowl (Florida State vs. Southern Miss)</em></div>
+<div class="line"><em>Last updated:  2017-12-27 20:49:41</em></div>
+<div class="line"><em>Last bowl scored:  New Era Pinstripe Bowl (Iowa vs. Boston College)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Bumblerooski 18.75</strong></div>
+<div class="line">1. <strong>Bumblerooski 19.75</strong></div>
 <div class="line">2. Clutch City 18.5</div>
 <div class="line">3. Still a Beaver Believer 16.75</div>
-<div class="line">4. Trojans 16.5</div>
-<div class="line">5. The Water and The Well 15.75</div>
-<div class="line">6. Jake and the Neverland Pirates 15.5</div>
-<div class="line">7. Bevo's Best 15.25</div>
-<div class="line">7. War Eagle 15.25</div>
-<div class="line">9. Bobbo 14.75</div>
-<div class="line">9. War Beaver 14.75</div>
-<div class="line">11. 4 Rackets 14.5</div>
-<div class="line">11. Cowboy 14.5</div>
-<div class="line">11. I lost the password to my first bracket 14.5</div>
-<div class="line">11. Yoda 14.5</div>
-<div class="line">15. Juul 14.25</div>
-<div class="line">16. beach lady 14.0</div>
-<div class="line">16. Superman 14.0</div>
-<div class="line">16. The Pick Doctor 14.0</div>
-<div class="line">19. Santa Cruz Bill 13.5</div>
-<div class="line">20. Winning Jeff 13.25</div>
-<div class="line">21. <strong>Static 13.0</strong></div>
-<div class="line">22. Coog Crew 12.75</div>
-<div class="line">22. Godiva Nine! 12.75</div>
-<div class="line">22. <strong>Nerf Herder 12.75</strong></div>
-<div class="line">25. Pooh Bear 12.5</div>
-<div class="line">26. Brothers before others 12.25</div>
-<div class="line">27. Katyusha 12.0</div>
-<div class="line">27. Make Bowl Season Great Again 12.0</div>
-<div class="line">27. Pepper Bear 12.0</div>
-<div class="line">27. Sorbet 12.0</div>
-<div class="line">27. <strong>Thunder 12.0</strong></div>
-<div class="line">27. UrbranLegend 12.0</div>
-<div class="line">33. <strong>Eclipse 11.75</strong></div>
-<div class="line">33. MidWestWheat 11.75</div>
-<div class="line">33. OSUX3 11.75</div>
-<div class="line">36. Josh's Bracket 11.5</div>
-<div class="line">36. Maui Girl 11.5</div>
-<div class="line">36. Putin's Dog 11.5</div>
-<div class="line">36. Tucker 11.5</div>
-<div class="line">40. Bay City Rollers 11.25</div>
-<div class="line">41. <strong>#MamaBear 11.0</strong></div>
-<div class="line">41. Assistant Coach Riley? 11.0</div>
-<div class="line">41. <strong>Lightning 11.0</strong></div>
-<div class="line">41. Rapacke's Bracket 11.0</div>
-<div class="line">45. Adrian A 10.75</div>
-<div class="line">46. Nurse Ratched 10.5</div>
-<div class="line">47. Texas Big Red 10.25</div>
-<div class="line">48. cutie pie 10.0</div>
-<div class="line">48. Escalante 10.0</div>
-<div class="line">48. The Striker 10.0</div>
-<div class="line">51. Go For Bones 9.75</div>
-<div class="line">51. Sgt. Pepper 9.75</div>
-<div class="line">51. Swampdonkey 9.75</div>
-<div class="line">51. West Coast Bias 9.75</div>
-<div class="line">55. Blind Dog's Bluff 9.5</div>
-<div class="line">55. Kevin's bracket 9.5</div>
-<div class="line">55. Luck be a lady 9.5</div>
-<div class="line">58. Batman 9.0</div>
-<div class="line">58. Go For Broke 9.0</div>
-<div class="line">60. Blindhog2017 8.75</div>
-<div class="line">60. Victorious Secret 8.75</div>
-<div class="line">62. <strong>D-Bo 8.5</strong></div>
-<div class="line">62. Duke Rules 8.5</div>
-<div class="line">62. Julez 8.5</div>
-<div class="line">62. YOLO Pups 8.5</div>
-<div class="line">66. <strong>Em214 8.0</strong></div>
-<div class="line">66. hapagirl 8.0</div>
-<div class="line">68. Santa's Helper 7.5</div>
-<div class="line">69. Lucky in 2018 7.25</div>
-<div class="line">70. Warren Mooned Me 6.25</div>
-<div class="line">71. <strong>GlamKam 6.0</strong></div>
+<div class="line">3. The Water and The Well 16.75</div>
+<div class="line">5. Jake and the Neverland Pirates 16.5</div>
+<div class="line">5. Trojans 16.5</div>
+<div class="line">7. War Eagle 16.25</div>
+<div class="line">8. War Beaver 15.75</div>
+<div class="line">9. 4 Rackets 15.5</div>
+<div class="line">9. Cowboy 15.5</div>
+<div class="line">9. I lost the password to my first bracket 15.5</div>
+<div class="line">12. Bevo's Best 15.25</div>
+<div class="line">13. Superman 15.0</div>
+<div class="line">13. The Pick Doctor 15.0</div>
+<div class="line">15. Bobbo 14.75</div>
+<div class="line">16. Santa Cruz Bill 14.5</div>
+<div class="line">16. Yoda 14.5</div>
+<div class="line">18. Juul 14.25</div>
+<div class="line">19. beach lady 14.0</div>
+<div class="line">20. Coog Crew 13.75</div>
+<div class="line">20. Godiva Nine! 13.75</div>
+<div class="line">20. <strong>Nerf Herder 13.75</strong></div>
+<div class="line">23. Winning Jeff 13.25</div>
+<div class="line">24. Katyusha 13.0</div>
+<div class="line">24. Make Bowl Season Great Again 13.0</div>
+<div class="line">24. Pepper Bear 13.0</div>
+<div class="line">24. Sorbet 13.0</div>
+<div class="line">24. <strong>Static 13.0</strong></div>
+<div class="line">24. <strong>Thunder 13.0</strong></div>
+<div class="line">24. UrbranLegend 13.0</div>
+<div class="line">31. MidWestWheat 12.75</div>
+<div class="line">31. OSUX3 12.75</div>
+<div class="line">33. Josh's Bracket 12.5</div>
+<div class="line">33. Pooh Bear 12.5</div>
+<div class="line">33. Putin's Dog 12.5</div>
+<div class="line">36. Bay City Rollers 12.25</div>
+<div class="line">36. Brothers before others 12.25</div>
+<div class="line">38. <strong>#MamaBear 12.0</strong></div>
+<div class="line">38. Assistant Coach Riley? 12.0</div>
+<div class="line">38. <strong>Lightning 12.0</strong></div>
+<div class="line">41. Adrian A 11.75</div>
+<div class="line">41. <strong>Eclipse 11.75</strong></div>
+<div class="line">43. Maui Girl 11.5</div>
+<div class="line">43. Tucker 11.5</div>
+<div class="line">45. Texas Big Red 11.25</div>
+<div class="line">46. cutie pie 11.0</div>
+<div class="line">46. Rapacke's Bracket 11.0</div>
+<div class="line">46. The Striker 11.0</div>
+<div class="line">49. Go For Bones 10.75</div>
+<div class="line">50. Kevin's bracket 10.5</div>
+<div class="line">50. Luck be a lady 10.5</div>
+<div class="line">50. Nurse Ratched 10.5</div>
+<div class="line">53. Escalante 10.0</div>
+<div class="line">54. Blindhog2017 9.75</div>
+<div class="line">54. Sgt. Pepper 9.75</div>
+<div class="line">54. Swampdonkey 9.75</div>
+<div class="line">54. Victorious Secret 9.75</div>
+<div class="line">54. West Coast Bias 9.75</div>
+<div class="line">59. Blind Dog's Bluff 9.5</div>
+<div class="line">59. <strong>D-Bo 9.5</strong></div>
+<div class="line">59. Duke Rules 9.5</div>
+<div class="line">59. Julez 9.5</div>
+<div class="line">59. YOLO Pups 9.5</div>
+<div class="line">64. Batman 9.0</div>
+<div class="line">64. <strong>Em214 9.0</strong></div>
+<div class="line">64. Go For Broke 9.0</div>
+<div class="line">67. Santa's Helper 8.5</div>
+<div class="line">68. Lucky in 2018 8.25</div>
+<div class="line">69. hapagirl 8.0</div>
+<div class="line">70. Warren Mooned Me 7.25</div>
+<div class="line">71. <strong>GlamKam 7.0</strong></div>
 </div>
 </div>
 </body>
